UINTRA2-810 CF activity list. Fix like and comment icons alignment

--- a/src/Uintra20/Content/src/app/feature/reusable/ui-elements/like-button/like-button.component.less
+++ b/src/Uintra20/Content/src/app/feature/reusable/ui-elements/like-button/like-button.component.less
@@ -7,14 +7,14 @@
   display: flex;
   align-items: center;
   margin-right: 19px;
-  
+
   &__text{
     font-size: 13px;
     color: #555;
   }
 
   i {
-    margin: -4px 9px 0 0;
+    margin: -0.25em 9px 0 0;
     color: #b2b2b2;
   }
   &--active {
