--- a/src/Uintra20/Content/src/app/ui/panels/central-feed/central-feed-publication/central-feed-publication.component.less
+++ b/src/Uintra20/Content/src/app/ui/panels/central-feed/central-feed-publication/central-feed-publication.component.less
@@ -104,6 +104,7 @@
         justify-content: space-between;
         flex-wrap: wrap;
         align-items: center;
+        margin-top: 20px;
 
         &-item {
             .reset-button;
@@ -119,7 +120,7 @@
             }
 
             i {
-                margin: 2px 9px -2px 0;
+                margin: 0 9px -2px 0;
                 color: #b2b2b2;
             }
 
